ffi/derive/tests/ui_fail/private_method_inside_impl.stderr
error: Methods defined in the inherent `impl` block must be public
 --> tests/ui_fail/private_method_inside_impl.rs:9:1
  |
9 | #[ffi_export]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ffi_export` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function, tuple struct or tuple variant `FfiStruct__private` in this scope
  --> tests/ui_fail/private_method_inside_impl.rs:17:9
   |
17 |         FfiStruct__private(IntoFfi::into_ffi(s));
   |         ^^^^^^^^^^^^^^^^^^ not found in this scope
